# trillek-vcomputer-module

./: .editorconfig  .gitconfig  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  Doxyfile  Makefile  README.md  appveyor.yml  bench_FX4100.txt  bench_FX4200.txt  build.ps1  call_Uncrustify.cfg  cpu.cpp  cpu.hpp  dis_rc1600.cpp  dis_rc1600.hpp  main.cpp  p.asm  p.hex  prebuild.ps1  ram.cpp  ram.hpp  test.asm  test.asm.lst
asm/: BROM.inc  beep.ffi  beep.lst  clock.asm  clock.ffi  clock.lst  floppy.asm  floppy.ffi  floppy.lst  hello.asm  hello.ffi  hello.lst  hwm.asm  hwn.ffi  hwn.lst  lib.inc  random.ffi  random.lst  test.asm  test.asm.lst  test.ffi  test.lst  type.asm  type1.ffi  type1.lst
asm/dcpu16n/: hello.asm  hello.ffi  hello.lst
asm/tr3200/: BROM.ainc  BROM.inc  beep.asm  beep.ffi  beep.lst  clock.asm  clock.ffi  clock.lst  floppy.asm  floppy.ffi  floppy.lst  hello.asm  hello.ffi  hello.lst  hwm.asm  hwn.asm  hwn.ffi  hwn.lst  random.asm  random.lst  test.asm  test.ffi  test.lst  type.asm  type1.asm  type1.ffi  type1.lst
assets/: CDAfont.pbm  CMakeLists.txt  EC1272-8x8.pbm  ec1272.inc
assets/shaders/: basic_fs.frag  basic_texture.frag  basic_vs.vert  mvp_template.vert  retro_texture.frag
cmake/: FindALURE.cmake  FindAlure.cmake  FindGLEW.cmake  FindGLFW3.cmake  FindGTEST.cmake  FindGTEST_MAIN.cmake  FindOpenAl.cmake  FindPackageHandleStandardArgs.cmake  LoadLibraries.cmake  Platform.cmake  SFML.cmake
cmake/Platform/: Emscripten.cmake
emscripten/: CMakeLists.txt  index.html  pre.js  vm_wrap.cpp  vm_wrap.hpp
emscripten/js/: main.js
include/: AddrListener.hpp  Aux.hpp  Auxiliar.hpp  CDA.hpp  CDAfont.inc  Cpu.hpp  DCPU16N.hpp  DCPU16N_macros.hpp  DisTR3200.hpp  EnumAndCtrlBlk.hpp  GKeyboard.hpp  ICPU.hpp  ICpu.hpp  IDevice.hpp  Ram.hpp  TR3200.hpp  TR3200_macros.hpp  TR3200_opcodes.hpp  Timer.hpp  Types.hpp  VC.hpp  VComputer.hpp  VM.hpp  VSFix.hpp  addr_listener.hpp  aux.hpp  auxiliar.hpp  cda.hpp  cpu.hpp  device.hpp  device_factory.hpp  dis_rc3200.hpp  endian.hpp  enum_and_ctrl_blk.hpp  ram.hpp  rc3200_opcodes.hpp  types.hpp  vc.hpp  vc_dll.hpp  vc_dll.hpp.in  (+2 more)
include/DCPU16N/: DCPU16N.hpp  DCPU16N_macros.hpp  DisDCPU16N.hpp
include/TR3200/: DisTR3200.hpp  TR3200.hpp  TR3200_cycles.inc  TR3200_macros.hpp  TR3200_opcodes.hpp
include/dcpu16n/: dcpu16n.hpp  dis_dcpu16n.hpp
include/devices/: Beeper.hpp  DebugSerialConsole.hpp  Disk.hpp  DummyDevice.hpp  GKeyb.hpp  M5FDD.hpp  RNG.hpp  ROMPalette.inc  RTC.hpp  TDA.hpp  TDAfont.inc  Timer.hpp  beeper.hpp  debug_serial_console.hpp  disk.hpp  dummy_device.hpp  gkeyb.hpp  m5fdd.hpp  media.hpp  nvram.hpp  rng.hpp  rtc.hpp  tda.hpp  timer.hpp
include/tr3200/: dis_tr3200.hpp  tr3200.hpp
src/: Aux.cpp  Auxiliar.cpp  CDA.cpp  CDA.hpp  CMakeLists.txt  Config.hpp.in  Cpu.cpp  DCPU16N.cpp  DisTR3200.cpp  EnumAndCtrlBlk.cpp  GKeyboard.cpp  IDevice.cpp  IDevice.hpp  TR3200.cpp  Timer.cpp  VComputer.cpp  VSFix.hpp  aux.cpp  auxiliar.cpp  benchmark.cpp  cda.cpp  config.h  config.hpp.in  config_main.hpp.in  cpu.cpp  cpu.hpp  cpu_vm.cpp  device_factory.cpp  dis_rc1600.cpp  dis_rc1600.hpp  dis_rc3200.cpp  dis_rc3200.hpp  endian.h  enum_and_ctrl_blk.cpp  main.cpp  pbm2font.cpp  ram.cpp  ram.hpp  rc3200_opcodes.hpp  test_cda.cpp  (+5 more)
src/DCPU16N/: DCPU16N.cpp  DCPU16N_macros.hpp  DisDCPU16N.cpp
src/TR3200/: DisTR3200.cpp  TR3200.cpp
src/dcpu16n/: dcpu16n.cpp  dcpu16n_macros.hpp  dis_dcpu16n.cpp
src/devices/: Beeper.cpp  Disk.cpp  GKeyb.cpp  M5FDD.cpp  RNG.cpp  RTC.cpp  TDA.cpp  Timer.cpp  beeper.cpp  beeper.hpp  disk.cpp  gkeyb.cpp  m5fdd.cpp  media.cpp  nvram.cpp  rng.cpp  rng.hpp  rtc.cpp  rtc.hpp  tda.cpp  timer.cpp  timer.hpp
src/tr3200/: dis_tr3200.cpp  tr3200.cpp  tr3200_cycles.inc  tr3200_macros.hpp  tr3200_opcodes.hpp
tests/: CMakeLists.txt  DummyDevice.hpp  GKeyb_test.cpp  VComputer_test.cpp  benchmark.cpp  cda_vm2_vram.inc  device_factory_test.cpp  gkeyb_test.cpp  test_cda.cpp  vcomputer_test.cpp
tools/: AlEngine.cpp  CMakeLists.txt  GlEngine.cpp  OS.hpp  config_main.hpp.in  main.cpp  makedisk.cpp  pbm2font.cpp  tda_view.cpp
tools/include/: AlEngine.hpp  GlEngine.hpp  KeyboardInputSystem.h  OS.hpp  VmParser.hpp  al_engine.hpp  gl_engine.hpp  glerror.hpp  keyboard_input_system.hpp  os.hpp  unwindows.hpp  vm_parser.hpp
tools/src/: AlEngine.cpp  GlEngine.cpp  al_engine.cpp  gl_engine.cpp  glerror.cpp
travis/: install_deps.sh
